--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="description" content="AI/NLP Researcher & Ph.D. Candidate at Missouri S&T. Large Language Models, Information Retrieval, and Human-Centered AI." />
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
 
-  <!-- Preload hero image -->
-  <link rel="preload" as="image" href="/static/ashish-david-headshot-800.webp" imagesrcset="/static/ashish-david-headshot-800.webp" />
+  <!-- Preload hero image (new headshot) -->
+  <link rel="preload" as="image" href="/static/ashish-david-headshot2-800.webp" imagesrcset="/static/ashish-david-headshot2-800.webp" />
 
   <!-- OpenGraph/Twitter -->
   <meta property="og:title" content="Ashish David - AI/NLP Researcher" />
   <meta property="og:description" content="Ph.D. Candidate at Missouri S&T working on LLMs, IR, and Human-Centered AI." />
-  <meta property="og:image" content="/static/ashish-david-headshot-800.jpg" />
+  <meta property="og:image" content="/static/ashish-david-headshot2-800.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ashish David - AI/NLP Researcher" />
   <meta name="twitter:description" content="LLMs • IR • Accessibility" />
-  <meta name="twitter:image" content="/static/ashish-david-headshot-800.jpg" />
+  <meta name="twitter:image" content="/static/ashish-david-headshot2-800.jpg" />
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -138,8 +138,8 @@
         <div class="relative">
           <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-academic-gold shadow-xl floating">
             <picture>
-              <source srcset="/static/ashish-david-headshot-800.webp" type="image/webp" />
-              <img src="/static/ashish-david-headshot-800.jpg" alt="Ashish David" width="800" height="800" loading="eager" class="w-full h-full object-cover" />
+              <source srcset="/static/ashish-david-headshot2-800.webp" type="image/webp" />
+              <img src="/static/ashish-david-headshot2-800.jpg" alt="Ashish David" width="800" height="800" loading="eager" class="w-full h-full object-cover" />
             </picture>
           </div>
           <div class="absolute -bottom-4 -right-4 bg-academic-blue text-white px-4 py-2 rounded-md shadow-lg">
@@ -311,7 +311,7 @@
               <h4 class="font-medium text-lg text-academic-blue">Strain-induced crumpling of graphene oxide lamellas to achieve fast and selective transport of H₂ and CO₂ for efficient decarbonization</h4>
               <p class="text-gray-600 mb-2">A. David et&nbsp;al., <span class="italic">Nature Nanotechnology</span>, 2025</p>
               <div class="flex flex-wrap gap-3 mt-2">
-                <a href="https://www.nature.com/" target="_blank" rel="noopener" class="text-sm text-academic-gold hover:underline">Publisher</a>
+                <a href="https://www.nature.com/articles/s41565-025-01971-8" target="_blank" rel="noopener" class="text-sm text-academic-gold hover:underline">Publisher</a>
               </div>
             </div>
             <span class="px-3 py-1 bg-academic-blue text-white rounded-full text-xs shadow-sm">Published</span>
@@ -355,12 +355,23 @@
     <div class="grid md:grid-cols-2 gap-8">
       <div class="bg-white p-8 rounded-xl shadow-md" data-aos="fade-up">
         <h3 class="text-2xl font-semibold text-academic-blue mb-6">Instructor</h3>
-        <p class="text-gray-600 text-sm">—</p>
+        <div class="space-y-6">
+          <div>
+            <h4 class="font-medium text-lg text-academic-blue">CS 1580 — Intro to Programming</h4>
+            <p class="text-gray-600 mb-2">Fall 2025, Missouri University of Science and Technology</p>
+            <p class="text-gray-600 text-sm">Primary instructor: delivered lectures, designed assessments, and guided student projects.</p>
+          </div>
+        </div>
       </div>
 
       <div class="bg-white p-8 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-2xl font-semibold text-academic-blue mb-6">Teaching Assistant</h3>
         <div class="space-y-6">
+          <div>
+            <h4 class="font-medium text-lg text-academic-blue">Algorithms</h4>
+            <p class="text-gray-600 mb-2">Fall 2025, Missouri University of Science and Technology</p>
+            <p class="text-gray-600 text-sm">Supported instruction, held office hours, and graded assignments/projects.</p>
+          </div>
           <div>
             <h4 class="font-medium text-lg text-academic-blue">C++ (TA)</h4>
             <p class="text-gray-600 mb-2">Mar 2022 – May 2023, Moscow Institute of Physics and Technology</p>
