--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
         <h3 class="text-xl font-semibold text-academic-blue">Software Engineer</h3>
         <p class="text-gray-600">Scaletorch.ai · Aug 2023 – Sep 2023</p>
         <ul class="list-disc list-inside text-gray-700 mt-3 space-y-1">
-          <li>Distributed DL training features; maintained AWS servers; shipped features and fixes.</li>
+          <li>Led the implementation of distributed deep learning training frameworks to enhance model scalability and performance.</li>
+          <li>Managed and optimized AWS server instances, ensuring reliable deployment, monitoring, and cost efficiency.</li>
+          <li>Designed and developed innovative product features, contributing directly to the company’s technology roadmap.</li>
+          <li>Executed rigorous testing protocols and resolved critical software bugs to maintain product quality and stability.</li>
         </ul>
       </div>
 
@@ -328,7 +331,9 @@
         <h3 class="text-xl font-semibold text-academic-blue">Research Student</h3>
         <p class="text-gray-600">MIPT · Oct 2022 – Jun 2023 · Advisor: Dr. Alexey Salnikov</p>
         <ul class="list-disc list-inside text-gray-700 mt-3 space-y-1">
-          <li>Improved MPI benchmarking app I/O using parallel NetCDF; balanced memory across processes.</li>
+          <li>Enhanced an existing MPI-based benchmarking application in C++ by leveraging all HPC cluster processors to efficiently write output data using parallel NetCDF and NetCDF libraries.</li>
+          <li>Optimized memory utilization by distributing workloads evenly across all active processors, significantly improving performance and scalability.</li>
+          <li>Developed additional validation checks within the Makefile to ensure the presence and proper configuration of essential external libraries, increasing system robustness.</li>
         </ul>
       </div>
 
@@ -336,7 +341,12 @@
         <h3 class="text-xl font-semibold text-academic-blue">Research Software Engineer (Sir Konstantin Novoselov Group)</h3>
         <p class="text-gray-600">NUS · Jan 2023 – May 2023 · Advisor: Dr. Andrey Ustyuzhanin</p>
         <ul class="list-disc list-inside text-gray-700 mt-3 space-y-1">
-          <li>Python app for gas diffusion coefficients with &lt;0.133% error; Excel automation; runtime cut &gt;100%.</li>
+          <li>Engineered a Python-based application to compute gas diffusion coefficients during mixed-gas diffusion experiments.</li>
+          <li>Streamlined data extraction and transformation from Excel using PyOpenXL to calculate key chemical parameters with precision.</li>
+          <li>Formulated and implemented advanced mathematical models for complex chemical equations to ensure highly accurate results.</li>
+          <li>Achieved diffusion coefficient estimations with an exceptional margin of error under 0.133% through the application of linear regression techniques.</li>
+          <li>Integrated configurable settings to enhance usability and adaptability for diverse experimental conditions.</li>
+          <li>Optimized computational performance, reducing calculation time by more than 100%, significantly improving workflow efficiency.</li>
         </ul>
       </div>
     </div>
