--- a/index.html
+++ b/index.html
@@ -279,9 +279,7 @@
           </div>
           <div>
             <h4 class="font-medium text-academic-blue">Iterative Query Rewriting Pipeline with LLMs and BERT Reranker</h4>
-            <p class="text-gray-600 text-sm">Developed an iterative query rewriting pipeline that integrates Mistral-8B-Instruct with a BERT reranker to dynamically reformulate queries and improve retrieval relevance.</p>
-            <p class="text-gray-600 text-sm">Implemented a closed-loop framework that refines queries based on reranking feedback, clarifying ambiguities and enhancing ranking quality.</p>
-            <p class="text-gray-600 text-sm">Evaluated the pipeline on TREC Robust04, achieving measurable gains in nDCG@10 over baseline retrieval methods and identifying optimal iteration counts for maximum performance.</p>
+            <p class="text-gray-600 text-sm">Multi-stage retrieval + LLM reformulation with BERT-based reranking to improve nDCG@10.</p>
           </div>
           <div>
             <h4 class="font-medium text-academic-blue">Persona-Adaptive Search / RAG</h4>
